# uac

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  uac-dev.install  uac.install
dict/: base.txt  g_android.txt  g_apple.txt  g_iphone.txt  g_other.txt  g_unix.txt  g_windows.txt
src/: sla.c  sla.h  uac.c  uac.h  uac_detect.c  uacc.cpp
test/: ua_src.txt
